# python-otp-gacha

./: Makefile  README.md  pyproject.toml
otp/: __init__.py
scripts/: sevens.py
tests/: test_otp.py
