[project]
name = "python-otp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
 "loguru>=0.7.3",
 "pytest>=8.4.1",
 "pytest-cov>=6.2.1",
 "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["otp"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "INP001",  # __init__.py
    "S101",    # assert used in tests
    "S105",    # password is hardcoded
    "S106",    # password is hardcoded
    "PLR2004", # magic number is used
]

"scripts/**" = [
    "INP001",
    "D",
    "G"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
